<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_menu_events_notes"
        android:icon="@drawable/ic_check_circle_outline_black"
        android:orderInCategory="1"
        android:title="@string/mainmenuitem_notes" />

    <item
        android:id="@+id/main_menu_events_events"
        android:icon="@drawable/ic_pillar_black"
        android:orderInCategory="1"
        android:title="@string/mainmenuitem_events" />

    <item
        android:id="@+id/main_menu_events_upgrade"
        android:icon="@drawable/ic_arrow_up"
        android:orderInCategory="1"
        android:title="@string/mainmenuitem_upgrade" />

    <item
        android:id="@+id/main_menu_events_moreapps"
        android:icon="@drawable/ic_google_play"
        android:orderInCategory="1"
        android:title="@string/mainmenuitem_more_apps" />

    <item
        android:id="@+id/main_menu_events_quit"
        android:icon="@drawable/ic_run_black"
        android:orderInCategory="1"
        android:title="@string/mainmenuitem_quit" />
</menu>