<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<item
        android:id="@+id/actionNotificationItem"
        android:icon="@drawable/ic_message_text"
        android:orderInCategory="1"
        android:title="@string/menu_notes_item_notifications" />-->

    <item
        android:id="@+id/todayItem"
        android:icon="@drawable/ic_pillar"
        android:orderInCategory="1"
        android:title="@string/menu_events_item_today" />

    <item
        android:id="@+id/thisMonthItem"
        android:icon="@drawable/ic_pillar"
        android:orderInCategory="1"
        android:title="@string/menu_events_item_thismonth" />

    <item
        android:id="@+id/allEventsItem"
        android:icon="@drawable/ic_pillar"
        android:orderInCategory="1"
        android:title="@string/menu_events_item_all_events" />


    <item
        android:id="@+id/mainmenuItem"
        android:icon="@drawable/ic_message_text"
        android:orderInCategory="1"
        android:title="@string/menu_events_item_mainmenu" />
</menu>